# piscine_python-for-data-science

0-starting/ex00/: Hello.py
0-starting/ex01/: format_ft_time.py
0-starting/ex02/: find_ft_type.py
0-starting/ex03/: NULL_not_found.py
0-starting/ex04/: whatis.py
0-starting/ex05/: building.py  doc.text
0-starting/ex06/: filterstring.py  ft_filter.py
0-starting/ex07/: sos.py
0-starting/ex08/: Loading.py  tester.py
0-starting/ex09/: README.md  pyproject.toml
0-starting/ex09/ft_package/: __init__.py  count_in_list.py
