[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A simple Python package"
authors = [{ name = "psaeyang" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
